<resources>
    <string name="app_name">ConectaLocal</string>

    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui!</string>
    <string name="button_cadastrar">Cadastrar</string>

    <string name="title_cadastro">Cadastre-se</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome do Empreendimento</string>
    <string name="email">Email</string>
    <string name="recuperar_senha">Esqueci minha senha</string>
    <string name="titulo_tipo_conta">Você quer criar uma conta para o seu empreeendimento ou como cliente?</string>
    <string name="ct_empre">Conta Empreendedora</string>
    <string name="ct_clie">Conta Cliente</string>
    <string name="descricao_conta_empreendedora">A conta empreendedora é ideal para empresas, lojas e prestadores de serviços locais que desejam divulgar seus produtos ou serviços.
                                                \n\nCom essa conta, você poderá:

                                                \n\n• Criar um perfil público com logotipo, descrição e localização
                                                \n• Cadastrar seus produtos ou serviços
                                                \n• Receber e responder avaliações de clientes
                                                \n• Visualizar e resolver reclamações publicadas
                                                \n• Ter destaque na plataforma

                                                \n\nPara se cadastrar, será necessário informar:
                                                \n\n• Nome do negócio
                                                \n• Categoria
                                                \n• Endereço
                                                \n• Contato
                                                \n• Redes sociais
                                                \n• Descrição dos serviços</string>
    <string name="descricao_conta_cliente">A conta de cliente é destinada a pessoas que desejam buscar, avaliar e interagir com empresas, lojas e prestadores de serviços locais. Com essa conta, o cliente poderá:

                                                \n\n• Explorar perfis públicos de negócios e conhecer seus produtos ou serviços
                                                \n• Realizar avaliações e deixar comentários sobre as experiências
                                                \n• Publicar reclamações de forma segura e acompanhar as respostas
                                                \n• Salvar empresas favoritas para fácil acesso
                                                \n• Receber notificações de promoções, eventos ou atualizações (opcional)

                                                \n\nO cadastro exige informações como nome completo, e-mail, telefone para contato e localização de seu município.</string>
    <string name="aviso_tipoConta">Selecione uma das opções acima para continuar</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="title_activity_form_dashboard">FormDashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>