<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/conteinerConponentes"
        style="@style/ConteinerComponents"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_text"
        android:hint="Email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/conteinerConponentes"
        app:layout_constraintEnd_toEndOf="@+id/conteinerConponentes"
        app:layout_constraintTop_toTopOf="@+id/conteinerConponentes"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_senha"
        app:endIconMode="password_toggle"
        android:hint="Senha"
        style="@style/layout_senha"
        app:layout_constraintStart_toStartOf="@+id/conteinerConponentes"
        app:layout_constraintEnd_toEndOf="@+id/conteinerConponentes"
        app:layout_constraintTop_toBottomOf="@+id/edit_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_senha"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>





    <TextView
        android:id="@+id/text_recuperar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_senha"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="190dp"
        android:textSize="15sp"
        android:textColor="@color/blue_light"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/layout_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_recuperar_senha"
        />

    <ProgressBar
        android:id="@+id/progessbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conteinerConponentes"
        />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastro"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/progessbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>